<resources>
    <string name="app_name">DRail</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_routing">Choose route</string>
    <string name="action_sign_in">Sign In</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_register">Register</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_cc">Credit Card</string>
    <string name="title_ticket_list">Tickets</string>
    <string name="title_ticket_detail">Ticket Detail</string>
    <string name="qr_code">QR Code</string>
    <string name="title_activity_trips_details">TripsDetailsActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_in">DRail</string>
    <string name="title_activity_register">Register</string>
</resources>
